# nrw505-agentic-ai-thingo

./: .envrc  .gitignore  Dockerfile  README.md  deploy-strands-agent-to-agentcore.ipynb  deploy-strands-agent-to-lambda.ipynb  deploy-to-agentcore.py  pyproject.toml  tests.txt
agent/: __init__.py  agent.py  agentcore_entrypoint.py  main.py
pet_store_agent/: cli.py  pet_store_agent.py  system_prompt.txt
